--- a/frontend/webadmin/modules/uiadmin/src/main/webapp/networks.html
+++ b/frontend/webadmin/modules/uiadmin/src/main/webapp/networks.html
@@ -39,11 +39,8 @@
 				<div class="ui basic button">
 					<i class="remove icon"></i>Remove
 				</div>
-				<div class="ui basic button">
-					<i class="remove circle icon"></i>Force Remove
-				</div>
-				<div class="ui basic button">
-					<i class="info circle icon"></i>Guide Me
+				<div class="ui basic button" id="refreshbutton">
+					<i class="circle icon"></i>Refresh
 				</div>
 				<!-- </div> -->
 				<table id="networktable" class="display" cellspacing="0" width="100%">
@@ -51,289 +48,71 @@
 			</div>
 		</div>
 	</div>
-	<div class="newnet ui modal">
+	<div class="newnet ui modal" id="newnetmodal">
 		<i class="close icon"></i>
 		<div class="header">New Logical Network</div>
 		<div id="modalwin" class="content">
 			<div class="ui grid">
-				<div class="three wide column left-panel">
-					<div class="ui vertical pointing menu">
-						<a class="item active">General</a> <a class="item">Cluster</a> <a
-							class="item">vNIC Profiles</a>
+				<div class="six wide column left-panel">
+					<div class="ui form">
+						<div class="fields">
+							<div class="seven wide field name">Name</div>
+							<div class="nine wide field value">
+								<input type="text" placeholder="Network Name" id="nname" name="nname">
+							</div>
+						</div>
+						<div class="fields">
+							<div class="seven wide field name">Description</div>
+							<div class="nine wide field value">
+								<input type="text" placeholder="Description" id="ndesc" name="ndesc">
+							</div>
+						</div>
+						<div class="fields">
+							<div class="seven wide field name">Comment</div>
+							<div class="nine wide field value">
+								<input type="text" placeholder="Comment" id="ncomment" name="ncomment">
+							</div>
+						</div>
 					</div>
 				</div>
-				<div class="seven wide column">
-					<div class="ui form">
-						<h3 class="ui dividing header">Export</h3>
-						<div class="ui checkbox">
-							<input type="checkbox"> <label>Create on external
-								provider</label>
-						</div>
-						<div class="fields">
-							<div class="six wide field name">External Provider:</div>
-							<div class="ten wide field value">
-								<select class="ui selection dropdown">
-									<option value="1">Amazon</option>
-									<option value="2">Google</option>
-								</select>
-							</div>
-						</div>
-						<div class="fields">
-							<div class="six wide field name">Physical Network:</div>
-							<div class="ten wide field value">
-								<input type="text">
-							</div>
-						</div>
-					</div>
+				<div class="nine wide column">
 					<div class="ui form">
 						<h3 class="ui dividing header">Network Parameters</h3>
 						<div class="fields">
 							<div class="eight wide field name">Network Label:</div>
 							<div class="eight wide field value">
-								<input type="text">
+								<input type="text" placeHolder="Label" id="nlabel" name="nlabel">
 							</div>
 						</div>
 						<div class="fields">
 							<div class="eight wide field name">
 								<div class="ui checkbox">
-									<input type="checkbox"> <label>Enable VLAN
-										tagging</label>
+									<input type="checkbox" id="ntagcheck" name="ntagcheck"> <label>Enable VLAN tagging</label>
 								</div>
 							</div>
 							<div class="eight wide field value">
-								<input type="text">
+								<input type="text" placeHolder="VLAN Tag" id="ntag" name="ntag">
 							</div>
 						</div>
 						<div class="fields">
 							<div class="six wide field">
 								<div class="ui checkbox">
-									<input type="checkbox"> <label>VM network</label>
+									<input type="checkbox" checked="true" id="nvmnet" name="nvmnet"> <label>VM network</label>
 								</div>
 							</div>
 							<div class="ten wide field grouped fields">
 								<label>MTU</label>
 								<div class="field">
 									<div class="ui radio checkbox">
-										<input type="radio" checked="checked" name="default">
+										<input type="radio" checked="true" name="nmtu" id="nmtudefault" value="Default">
 										<label>Default(1500)</label>
 									</div>
 								</div>
 								<div class="inline field">
 									<div class="ui radio checkbox">
-										<input type="radio" name="custom"> <label>Custom</label>
+										<input type="radio" name="nmtu" id="nmtucustom" value="Custom"> <label>Custom</label>
 									</div>
-									<input type="text">
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="six wide column right-panel">
-					<div class="ui form">
-						<div class="fields">
-							<div class="seven wide field name">Name</div>
-							<div class="nine wide field value">
-								<input type="text" placeholder="Name Input">
-							</div>
-						</div>
-						<div class="fields">
-							<div class="seven wide field name">Description</div>
-							<div class="nine wide field value">
-								<input type="text" placeholder="Description">
-							</div>
-						</div>
-						<div class="fields">
-							<div class="seven wide field name">Comment</div>
-							<div class="nine wide field value">
-								<input type="text" placeholder="Comment">
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div id="modalbottom" class="actions">
-			<div class="ui teal button" style="float: left;">Hide Advanced
-				Options</div>
-			<div class="ui primary button">Submit</div>
-			<div class="ui basicv button">Cancel</div>
-		</div>
-	</div>
-	<div class="newuser ui modal">
-		<i class="close icon"></i>
-		<div class="header">Add Permission to User</div>
-		<div id="modalwin" class="content">
-			<div class="ui form">
-				<div class="grouped inline fields">
-					<div class="field">
-						<div class="ui radio checkbox">
-							<input type="radio" checked="checked" name="fruit"> <label>Specufic
-								Usre/Group</label>
-						</div>
-					</div>
-					<div class="field">
-						<div class="ui radio checkbox">
-							<input type="radio" name="fruit"> <label>Everyone</label>
-						</div>
-					</div>
-				</div>
-				<div class="sixteen wide column">
-					<div class="three fields">
-						<div class="inline field">
-							<label>Search</label> <select class="ui selection dropdown">
-								<option value="1">internal</option>
-								<option value="2">external</option>
-							</select>
-						</div>
-						<div class="inline field">
-							<label>Namespace</label> <select class="ui selection dropdown">
-								<option value="1">*</option>
-								<option value="2">/vms</option>
-								<option value="3">/datacenter</option>
-								<option value="4">/network</option>
-							</select>
-						</div>
-						<div class="inline field">
-							<input type="text" placeholder="Text Input">
-							<div class="ui basic button">GO</div>
-						</div>
-					</div>
-				</div>
-				<div class="sixteen wide column">
-					<table id="usertable" class="display" cellspacing="0" width="100%">
-					</table>
-				</div>
-			</div>
-		</div>
-		<div id="modalbottom" class="actions">
-			<div class="ui primary button">Submit</div>
-			<div class="ui basicv button">Cancel</div>
-		</div>
-	</div>
-	<div class="page ui modal">
-		<i class="close icon"></i>
-		<div class="header">New Virtual Machine</div>
-		<div id="modalwin" class="content">
-			<div class="ui grid">
-				<div class="three wide column left-panel">
-					<div class="ui vertical pointing menu">
-						<a class="item">General</a> <a class="item active">System</a> <a
-							class="item">Initial Run</a> <a class="item">Console</a> <a
-							class="item">Host</a> <a class="item">High Availability</a> <a
-							class="item">Resource Allocation</a> <a class="item">Boot
-							Options</a><a class="item">Random Generator</a> <a class="item">Custom
-							Properties</a>
-					</div>
-				</div>
-				<div class="seven wide column">
-					<div class="ui form">
-						<div class="fields">
-							<div class="four wide field name">Name:</div>
-							<div class="twelve wide field value">
-								<input type="text" placeholder="VM Name">
-							</div>
-						</div>
-						<div class="fields">
-							<div class="four wide field name">Description:</div>
-							<div class="twelve wide field value">
-								<input type="text" placeholder="Description">
-							</div>
-						</div>
-						<div class="fields">
-							<div class="four wide field name">Comment:</div>
-							<div class="twelve wide field value">
-								<input type="text" placeholder="Comment">
-							</div>
-						</div>
-						<div class="inline field">
-							<div class="ui checkbox">
-								<input type="checkbox"> <label>Stateless</label>
-							</div>
-							<div class="ui checkbox">
-								<input type="checkbox"> <label>Start in Pause
-									Mode</label>
-							</div>
-							<div class="ui checkbox">
-								<input type="checkbox"> <label>Delete Protection</label>
-							</div>
-						</div>
-						<div class="pick fields">
-							<div class="two wide field name">nic1</div>
-							<div class="ten wide field">
-								<select class="ui selection dropdown">
-									<option value="1">mgmt/mgmt</option>
-									<option value="2">mgmt1/mgmt2</option>
-								</select>
-							</div>
-							<div class="four wide field name">
-								<div class="ui ignored icon buttons">
-									<div class="ui show button">
-										<i class="plus icon"></i>
-									</div>
-									<div class="ui hide button">
-										<i class="minus icon"></i>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="six wide column right-panel">
-					<div class="ui form">
-						<div class="six wide column right-panel">
-							<div class="ui form">
-								<div class="fields">
-									<div class="seven wide field name">Cluster</div>
-									<div class="nine wide field value">
-										<select class="ui selection dropdown">
-											<option value="1" selected>Default</option>
-										</select>
-									</div>
-								</div>
-								<div class="fields">
-									<div class="seven wide field name">Based on Template</div>
-									<div class="nine wide field value">
-										<select class="ui selection dropdown">
-											<option value="1" selected>Template1</option>
-											<option value="2">Template2</option>
-										</select>
-									</div>
-								</div>
-								<div class="fields">
-									<div class="seven wide field name">Template Sub Version</div>
-									<div class="nine wide field value">
-										<select class="ui selection dropdown">
-											<option value="1" selected>2.1</option>
-											<option value="2">2.2</option>
-										</select>
-									</div>
-								</div>
-								<div class="fields">
-									<div class="seven wide field name">Operation System</div>
-									<div class="nine wide field value">
-										<select class="ui selection dropdown">
-											<option value="1" selected>CentOS</option>
-											<option value="2">Ubuntu</option>
-										</select>
-									</div>
-								</div>
-								<div class="fields">
-									<div class="seven wide field name">Instance Type</div>
-									<div class="nine wide field value">
-										<select class="ui selection dropdown">
-											<option value="1" selected>image</option>
-											<option value="2">cd rom</option>
-										</select>
-									</div>
-								</div>
-								<div class="fields">
-									<div class="seven wide field name">Optimized for</div>
-									<div class="nine wide field value">
-										<select class="ui selection dropdown">
-											<option value="1" selected>Linux</option>
-											<option value="2">Windows</option>
-										</select>
-									</div>
+									<input type="text" placeHolder="Custom MTU" id="nmtucustomval" name="nmtucustomval">
 								</div>
 							</div>
 						</div>
@@ -342,24 +121,9 @@
 			</div>
 		</div>
 		<div id="modalbottom" class="actions">
-			<div class="ui teal button" style="float: left;">Hide Advanced
-				Options</div>
-			<div class="ui primary button">Submit</div>
+			<div class="ui primary button" id="addnetbutton">Submit</div>
 			<div class="ui basicv button">Cancel</div>
 		</div>
-	</div>
-	<div class="attachiso ui modal">
-		<i class="close icon"></i>
-		<div class="header">Attach ISO Library</div>
-		<div div="newmodal" class="content">
-			<table id="isotable" class="display" cellspacing="0" width="100%">
-			</table>
-		</div>
-		<div id="modalbottom" class="actions">
-			<div class="ui primary button">Ok</div>
-			<div class="ui basicv button">Cancel</div>
-		</div>
-	</div>
 	</div>
 </body>
 <html>
