--- a/frontend/webadmin/modules/uiadmin/src/main/webapp/storage.html
+++ b/frontend/webadmin/modules/uiadmin/src/main/webapp/storage.html
@@ -13,6 +13,7 @@
 <script type="text/javascript" src="res/jquery.contextMenu.js"></script>
 <script type="text/javascript" src="res/semantic.js"></script>
 <script type="text/javascript" src="res/jquery.dataTables.js"></script>
+<script type="text/javascript" src="res/dataTables.select.min.js"></script>
 <script type="text/javascript" src="res/common.js"></script>
 <script type="text/javascript" src="res/storage/storage.js"></script>
 <link rel="stylesheet" type="text/css" href="res/common.css">
@@ -20,6 +21,8 @@
 <link rel="stylesheet" type="text/css" href="res/jquery.dataTables.css">
 <link rel="stylesheet" type="text/css" href="res/storage/storage.css">
 <link rel="stylesheet" type="text/css" href="res/jquery.contextMenu.css">
+<link rel="stylesheet" type="text/css" href="res/select.dataTables.min.css">
+<link rel="stylesheet" type="text/css" href="res/select.bootstrap.min.css">
 
 </head>
 <body id="page">
@@ -32,7 +35,7 @@
 			<!-- <div class="button demo"> -->
 			<div class="table_container">
 				<div class="ui basic button" id="newstoragebutton">
-					<i class="plus icon"></i>New
+					<i class="plus icon"></i>New Domain
 				</div>
 				<div class="ui basic button">
 					<i class="edit icon"></i>Edit
@@ -41,16 +44,68 @@
 					<i class="remove icon"></i>Remove
 				</div>
 				<div class="ui basic button">
-					<i class="remove circle icon"></i>Force Remove
-				</div>
-				<div class="ui basic button">
-					<i class="info circle icon"></i>Guide Me
+					<i class="circle icon"></i> Refresh
 				</div>
 				<!-- </div> -->
 				<table id="storagetable" class="display" cellspacing="0"
 					width="100%">
 				</table>
 			</div>
+		</div>
+	</div>
+	
+	<!-- New Storage Domain Modal -->
+	<div class="page ui modal" id="newstoragemodal">
+		<i class="close icon"></i>
+		<div class="header">New Storage Domain</div>
+		<div id="modalwin" class="content">
+			<div class="ui grid">
+				<div class="twenty wide column">
+					<div class="ui form">
+						<div class="fields">
+							<div class="nine wide field name">Name:</div>
+							<div class="twelve wide field value">
+								<input type="text" placeholder="Storage Domain Name" id="sname" name="sname">
+							</div>
+						</div>
+						<div class="fields">
+							<div class="nine wide field name">Comment:</div>
+							<div class="twelve wide field value">
+								<input type="text" placeholder="Comment" id="scomment" name="scomment">
+							</div>
+						</div>
+						<div class="fields">
+							<div class="nine wide field name">Description:</div>
+							<div class="twelve wide field value">
+								<input type="text" placeholder="Description" id="sdesc" name="sdesc">
+							</div>
+						</div>
+						<div class="fields">
+							<div class="nine wide field name">Domain Function/Storage Type:</div>
+							<div class="twelve wide field value">
+								<select id="stype" name="stype">
+									<option value="NFS">Data / NFS</option>
+								</select>
+							</div>
+						</div>
+						<div class="fields">
+							<div class="nine wide field name">Use Host:</div>
+							<div class="twelve wide field value"><select id="shost" name="shost">
+							</select></div>
+						</div>
+						<div class="fields">
+							<div class="nine wide field name">Export Path:</div>
+							<div class="twelve wide field value">
+								<input type="text" id="spath" name="spath" placeHolder="Export Path" />
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="modalbottom" class="actions">
+			<div class="ui primary button" id="submitButton">Submit</div>
+			<div class="ui basicv button">Cancel</div>
 		</div>
 	</div>
 </body>
