--- a/frontend/webadmin/modules/uiadmin/src/main/webapp/networks.html
+++ b/frontend/webadmin/modules/uiadmin/src/main/webapp/networks.html
@@ -13,6 +13,7 @@
 <script type="text/javascript" src="res/jquery.contextMenu.js"></script>
 <script type="text/javascript" src="res/semantic.js"></script>
 <script type="text/javascript" src="res/jquery.dataTables.js"></script>
+<script type="text/javascript" src="res/dataTables.select.min.js"></script>
 <script type="text/javascript" src="res/common.js"></script>
 <script type="text/javascript" src="res/network/networks.js"></script>
 <link rel="stylesheet" type="text/css" href="res/common.css">
@@ -20,6 +21,8 @@
 <link rel="stylesheet" type="text/css" href="res/jquery.dataTables.css">
 <link rel="stylesheet" type="text/css" href="res/network/networks.css">
 <link rel="stylesheet" type="text/css" href="res/jquery.contextMenu.css">
+<link rel="stylesheet" type="text/css" href="res/select.dataTables.min.css">
+<link rel="stylesheet" type="text/css" href="res/select.bootstrap.min.css">
 </head>
 <body id="page">
 	<div class="ui menu" id="topmenucontainer">
@@ -33,10 +36,10 @@
 				<div class="ui basic button" id="newnetbutton">
 					<i class="plus icon"></i>New
 				</div>
-				<div class="ui basic button">
+				<div class="ui basic button" id="editnetbutton">
 					<i class="edit icon"></i>Edit
 				</div>
-				<div class="ui basic button">
+				<div class="ui basic button" id="rmnetbutton">
 					<i class="remove icon"></i>Remove
 				</div>
 				<div class="ui basic button" id="refreshbutton">
@@ -79,12 +82,6 @@
 					<div class="ui form">
 						<h3 class="ui dividing header">Network Parameters</h3>
 						<div class="fields">
-							<div class="eight wide field name">Network Label:</div>
-							<div class="eight wide field value">
-								<input type="text" placeHolder="Label" id="nlabel" name="nlabel">
-							</div>
-						</div>
-						<div class="fields">
 							<div class="eight wide field name">
 								<div class="ui checkbox">
 									<input type="checkbox" id="ntagcheck" name="ntagcheck"> <label>Enable VLAN tagging</label>
@@ -122,6 +119,79 @@
 		</div>
 		<div id="modalbottom" class="actions">
 			<div class="ui primary button" id="addnetbutton">Submit</div>
+			<div class="ui basicv button">Cancel</div>
+		</div>
+	</div>
+	
+	<!-- Edit Network Modal -->
+	<div class="newnet ui modal" id="enetmodal">
+		<i class="close icon"></i>
+		<div class="header">Edit Logical Network</div>
+		<div class="content">
+			<div class="ui grid">
+				<div class="six wide column left-panel">
+					<div class="ui form">
+						<div class="fields">
+							<div class="seven wide field name">Name</div>
+							<div class="nine wide field value">
+								<input type="text" placeholder="Network Name" id="enname" name="enname" />
+							</div>
+						</div>
+						<div class="fields">
+							<div class="seven wide field name">Description</div>
+							<div class="nine wide field value">
+								<input type="text" placeholder="Description" id="endesc" name="endesc" />
+							</div>
+						</div>
+						<div class="fields">
+							<div class="seven wide field name">Comment</div>
+							<div class="nine wide field value">
+								<input type="text" placeholder="Comment" id="encomment" name="encomment" />
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="nine wide column">
+					<div class="ui form">
+						<h3 class="ui dividing header">Network Parameters</h3>
+						<div class="fields">
+							<div class="eight wide field name">
+								<div class="ui checkbox">
+									<input type="checkbox" id="entagcheck" name="entagcheck"> <label>Enable VLAN tagging</label>
+								</div>
+							</div>
+							<div class="eight wide field value">
+								<input type="text" placeHolder="VLAN Tag" id="entag" name="entag">
+							</div>
+						</div>
+						<div class="fields">
+							<div class="six wide field">
+								<div class="ui checkbox">
+									<input type="checkbox" checked="true" id="envmnet" name="envmnet"> <label>VM network</label>
+								</div>
+							</div>
+							<div class="ten wide field grouped fields">
+								<label>MTU</label>
+								<div class="field">
+									<div class="ui radio checkbox">
+										<input type="radio" checked="true" name="enmtu" id="enmtudefault" value="Default">
+										<label>Default(1500)</label>
+									</div>
+								</div>
+								<div class="inline field">
+									<div class="ui radio checkbox">
+										<input type="radio" name="enmtu" id="enmtucustom" value="Custom"> <label>Custom</label>
+									</div>
+									<input type="text" placeHolder="Custom MTU" id="enmtucustomval" name="enmtucustomval">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="modalbottom" class="actions">
+			<div class="ui primary button" id="ednetbutton">Submit</div>
 			<div class="ui basicv button">Cancel</div>
 		</div>
 	</div>
