--- a/frontend/webadmin/modules/uiadmin/src/main/webapp/networks.html
+++ b/frontend/webadmin/modules/uiadmin/src/main/webapp/networks.html
@@ -76,6 +76,12 @@
 								<input type="text" placeholder="Comment" id="ncomment" name="ncomment">
 							</div>
 						</div>
+						<div class="fields">
+							<div class="seven wide field name">Host Nic</div>
+							<div class="nine wide field value">
+								<select id="nnichost" name="nnichost"></select>
+							</div>
+						</div>
 					</div>
 				</div>
 				<div class="nine wide column">
