--- a/frontend/webadmin/modules/uiadmin/src/main/webapp/vms.html
+++ b/frontend/webadmin/modules/uiadmin/src/main/webapp/vms.html
@@ -129,6 +129,12 @@
 									</div>
 								</div>
 								<div class="fields">
+									<div class="seven wide field name">Storage Domain</div>
+									<div class="nine wide field value">
+										<select id="nvmsdomain" name="nvmsdomain"></select>
+									</div>
+								</div>
+								<div class="fields">
 									<div class="seven wide field name">Disk Size</div>
 									<div class="nine wide field value">
 										<input type="text" id="nvmdisk" name="nvmdisk" placeHolder="Disk Size (GB)" />
