--- a/frontend/webadmin/modules/uiadmin/src/main/webapp/login.html
+++ b/frontend/webadmin/modules/uiadmin/src/main/webapp/login.html
@@ -59,10 +59,29 @@
 				</div>
 				<div class="inline field">
 					<div class="ui blue submit button" id="LoginButton">Login</div>
+					 <div id="inputkey" style="float:right;border-bottom:1px solid;cursor:pointer;">Input License</div>
 				</div>
 			</form>
 		</div>
 		<div class="column"></div>
 	</div>
+	<div class="inputkey ui modal">
+      <i class="close icon"></i>
+      <div class="header">
+        Submit Key
+      </div>
+      <div id="newmodal" class="content">
+        <div class="ui form">
+          <div class="field">
+            <label>Key<span style="font-weight:100;">:(input the key and submit)</span></label>
+            <textarea id="licensetext"></textarea>
+          </div>
+        </div>
+      </div>
+      <div id="modalbottom" class="actions">
+        <div class="ui primary button" id="keysubmitbutton">Submit</div>
+        <div class="ui basicv button">Cancel</div>
+      </div>
+    </div>
 </body>
 <html>
