--- a/frontend/webadmin/modules/uiadmin/src/main/webapp/login.html
+++ b/frontend/webadmin/modules/uiadmin/src/main/webapp/login.html
@@ -74,6 +74,7 @@
         <div class="ui form">
           <div class="field">
             <label>Key<span style="font-weight:100;">:(input the key and submit)</span></label>
+            <label>Current Machine Code:<span id="mcode"></span></label>
             <textarea id="licensetext"></textarea>
           </div>
         </div>
