--- a/frontend/webadmin/modules/uiadmin/src/main/webapp/login.html
+++ b/frontend/webadmin/modules/uiadmin/src/main/webapp/login.html
@@ -59,7 +59,7 @@
 				</div>
 				<div class="inline field">
 					<div class="ui blue submit button" id="LoginButton">Login</div>
-					 <div id="inputkey" style="float:right;border-bottom:1px solid;cursor:pointer;">Input License</div>
+					<div id="inputkey" style="float:right;border-bottom:1px solid;cursor:pointer;">Input License</div>
 				</div>
 			</form>
 		</div>
@@ -75,12 +75,13 @@
           <div class="field">
             <label>Key<span style="font-weight:100;">:(input the key and submit)</span></label>
             <label>Current Machine Code:<span id="mcode"></span></label>
+            <label>Current License:<span id="clicense"></span></label>
             <textarea id="licensetext"></textarea>
           </div>
         </div>
       </div>
       <div id="modalbottom" class="actions">
-        <div class="ui primary button" id="keysubmitbutton">Submit</div>
+        <div class="ui primary button" id="keysubmitbutton">Update</div>
         <div class="ui basicv button">Cancel</div>
       </div>
     </div>
